--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^5.1.0",
     "@gradio/client": "^1.15.5",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
@@ -20,4 +21,3 @@
   "author": "",
   "license": "ISC"
 }
-
